2014-06-14  Andreas Kling  <akling@apple.com>

        GCController should return FastMalloc memory to the system.
        <https://webkit.org/b/133884>

        Reviewed by Anders Carlsson.

        Speculative test fix; I'm kinda suspecting that some tests are reporting
        more memory used because we did a GC but didn't get around to returning
        free pages to the system yet.

        * bindings/js/GCController.cpp:
        (WebCore::GCController::garbageCollectNow):

2014-06-14  Zan Dobersek  <zdobersek@igalia.com>

        Generate HTTP header names that are required by WebKitWebSrc
        https://bugs.webkit.org/show_bug.cgi?id=133906

        Reviewed by Anders Carlsson.

        WebKitWebSrc implementation sets icy-metadata and transferMode.dlna HTTP headers
        on ResourceRequest objects. The two headers are added to HTTPHeaderNames.in, and
        a small tweak is added to the generator script to avoid the dot in the second
        header's name (which would otherwise generate invalid C++).

        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        (webKitWebSrcStart):
        * platform/network/HTTPHeaderNames.in:
        * platform/network/create-http-header-name-table:

2014-06-14  Anders Carlsson  <andersca@apple.com>

        Replace some uses of ResourceRequestBase::addHTTPHeaderField with setHTTPHeaderField
        https://bugs.webkit.org/show_bug.cgi?id=133907

        Reviewed by Andreas Kling.

        * Modules/websockets/WebSocketHandshake.cpp:
        (WebCore::WebSocketHandshake::clientHandshakeRequest):
        * platform/network/HTTPHeaderNames.in:
        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::applyBasicAuthorizationHeader):
        * platform/network/mac/ResourceHandleMac.mm:
        (WebCore::applyBasicAuthorizationHeader):

2014-06-13  Anders Carlsson  <andersca@apple.com>

        Add a ResourceRequestBase::setHTTPHeaderField overload that takes a HTTPHeaderName